--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,8 @@
     top: 0;
     left: 0;
     z-index: 100;
-    background: rgba(230, 163, 170, 0.6);
+    background:#FFFFFF;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
 
 ul {
