--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -64,6 +64,9 @@ li{
     font-size: 30px;
     line-height: 18px;
 }
+.avatar{
+   
+}
 .header-menu{
     font-family: 'Inter';
     font-style: normal;
