--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@
           </ul>
           <ul class="menu-list menu-right-list">
             <li class="menu-item"><a class="menu-link">
-              <div class="icons-container"><img src="./assets/img/shopping-cart.svg" alt="shopping-cart">
+              <div class="icons-container"><img class="shoping-cart" src="./assets/img/shopping-cart.svg" alt="shopping-cart">
               </div></a></li>
             <li class="menu-item"><a class="menu-link">
-              <div class="icons-container"><img src="./assets/img/Avatar.svg" alt="shopping-cart">
+              <div class="icons-container"><img class="avatar" src="./assets/img/Avatar.svg" alt="shopping-cart">
               </div></a></li>
           </ul>
         </nav>
