--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
 <div class="header">
     <div class="header-container">
-        <a class="header-logo-text"><span>FlowerShop</span></a>
+        <a class="header-logo-text" routerLink="home">FlowerShop</a>
         <div class="header-menu menu">
             <nav class="menu-body">
                 <ul class="menu-list menu-left-list">
-                    <li class="menu-item"><a class="menu-link">Головна</a></li>
-                    <li class="menu-item"><a class="menu-link">Магазин</a></li>
-                    <li class="menu-item"><a class="menu-link">Конструктор букетів</a></li>
-                    <li class="menu-item"><a class="menu-link">Блог</a></li>
-                    <li class="menu-item"><a class="menu-link">Про нас</a></li>
+                    <li class="menu-item"><a class="menu-link" routerLink="home">Головна</a></li>
+                    <li class="menu-item"><a class="menu-link" routerLink="store">Магазин</a></li>
+                    <li class="menu-item"><a class="menu-link" routerLink="constructor">Конструктор букетів</a></li>
+                    <li class="menu-item"><a class="menu-link" routerLink="blog">Блог</a></li>
+                    <li class="menu-item"><a class="menu-link" routerLink="about">Про нас</a></li>
                 </ul>
                 <ul class="menu-list menu-right-list">
                     <li class="menu-item"><a class="menu-link">
