--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <app-header></app-header>
+    <app-header style="z-index: 1"></app-header>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
