fix store layout

--- a/src/app/pages/store/store.component.css
+++ b/src/app/pages/store/store.component.css
@@ -25,3 +25,13 @@
 app-searchbar {
     flex: 1;
 }
+
+mat-drawer-container {
+    z-index: 0;
+    height: 100%;
+    background-color: white;
+}
+
+:host {
+    flex: 1;
+}
