--- a/src/app/pages/store/components/store-item/store-item.component.html
+++ b/src/app/pages/store/components/store-item/store-item.component.html
@@ -1,4 +1,4 @@
-<img [src]="product?.image" style="width: 100%">
+<img [src]="product?.imageUrl" style="width: 100%">
 <div class="info">
     <p>{{product?.name}}</p>
     <h2>{{product?.price | currency}}</h2>
