--- a/src/app/pages/store/components/filters/filters.component.css
+++ b/src/app/pages/store/components/filters/filters.component.css
@@ -26,3 +26,28 @@ h2 {
     margin-bottom: 0;
     margin-right: 32px;
 }
+
+h3{
+    margin: 0;
+}
+
+.mat-expansion-panel{
+    background-color: initial;
+}
+.mat-expansion-panel-header{
+    padding-right: 8px;
+    padding-left: 0;
+}
+
+.search-option{
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    border-radius: 20px;
+    height: 40px;
+    padding-left: 30px;
+    outline: none;
+}
+
+::ng-deep .mat-expansion-panel-body{
+    padding: 0;
+}
