--- a/src/app/pages/store/components/filters/filters.component.html
+++ b/src/app/pages/store/components/filters/filters.component.html
@@ -7,7 +7,46 @@
     </div>
     <mat-card-content>
         <div style="margin-top: 16px">
-            asdasdassaaasdasdasd
+            <mat-accordion>
+                <mat-expansion-panel class="mat-elevation-z0">
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <h3>Квіти</h3>
+                    </mat-panel-title>
+                  </mat-expansion-panel-header>
+
+                  <input class="search-option" type="text" matInput name="searchInput"  [formControl]="searchInput" 
+                    placeholder="Пошук...">
+                  <mat-selection-list (selectionChange)="selectionChange($event)" #flowers>
+                    <mat-list-option checkboxPosition="before" *ngFor="let flower of filteredOptions" [selected]="flowersSet.get(flower)" [value]="flower">
+                      {{flower}}
+                    </mat-list-option>
+                  </mat-selection-list>
+                </mat-expansion-panel>
+
+                <mat-divider></mat-divider>
+
+                <mat-expansion-panel class="mat-elevation-z0">
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <h3>Ціна</h3>
+                    </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <p>I'm visible because I am open</p>
+                </mat-expansion-panel>
+                <mat-divider></mat-divider>
+
+                <mat-expansion-panel class="mat-elevation-z0">
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <h3>Тип</h3>
+                    </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <p>I'm visible because I am open</p>
+                </mat-expansion-panel>
+                <mat-divider></mat-divider>
+
+              </mat-accordion>
         </div>
     </mat-card-content>
 </mat-card>
