Store page: init products-type-filter

--- a/src/app/pages/store/components/filters/filters.component.html
+++ b/src/app/pages/store/components/filters/filters.component.html
@@ -13,26 +13,11 @@
 
                 <mat-divider></mat-divider>
 
-                <mat-expansion-panel class="mat-elevation-z0">
-                  <mat-expansion-panel-header>
-                    <mat-panel-title>
-                      <h3>Ціна</h3>
-                    </mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
+              <app-products-price-filter></app-products-price-filter>
 
                 <mat-divider></mat-divider>
 
-                <mat-expansion-panel class="mat-elevation-z0">
-                  <mat-expansion-panel-header>
-                    <mat-panel-title>
-                      <h3>Тип</h3>
-                    </mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
-                <mat-divider></mat-divider>
+              <app-products-type-filter></app-products-type-filter>
 
               </mat-accordion>
         </div>
