add page about us and page delivery and payment

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,33 @@
-<p>about works!</p>
+<div class="container">
+    <div class="gap">
+        <h1>Про нас</h1>
+            <p>Ми обожнюємо квіти та обожнюємо ними ділитися. Тож задля цього особисто обираємо та веземо в Україну кращі бутони з усіх куточків планети. Ми знаємо тренди світової квіткової моди, так само як тонкощі зберігання, транспортування та дбайливого догляду квітки. Адже займаємося цим вже понад 10 років.</p>
+            <img class="center-img" src="assets\img\about\about-01.webp" alt="" />
+        
+        <h1>Ми обожнюємо квіти та плекаємо їх особливу роль в житті міста.</h1>
+            <p>Запрошуємо й вас побачити це — у найбільшому квітковому бутіку міста, у нашому кожному новому рішенні. Ми втілюємо у сучасних букетах почуття сучасних людей. Ваші почуття.</p>
+        
+            <div class="benefits">
+                <div class="benefits_item">
+                    <img class="center-img" src="assets\img\about\benefits-1.webp" alt="" />
+                    <h1>ПРИЄМНА ТЕХНОЛОГІЧНІСТЬ</h1>
+                    <p >Вибір кращого букета — відповідальний момент. Та разом ми зробимо це швидко, легко та радісно, ​​де б ви не знаходилися та чим би не займалися цієї миті. Телефон, месенджери, сайт або соцмережі — ми з вами всюди, з першої секунди та до самої доставки.</p>       
+                </div>
+                <div class="benefits_item">                 
+                    <img class="center-img" src="assets\img\about\benefits-2.webp" alt="" />
+                    <h1>КВІТИ СУЧАСНОГО МІСТА</h1>
+                    <p >Квіткові тренди змінюються швидше, ніж подіумні. Тож сьогодні букет  — не натюрморт з картини, а стильний аксесуар в інстаграм. Ми знаємо, як виглядають почуття сучасного міста та втілюємо їх у квітах. До того ж знаємо його ритм та звички, тож говоримо з вами однією</p>         
+                </div>
+                <div class="benefits_item">
+                    <img class="center-img" src="assets\img\about\benefits-3.webp" alt="" />
+                    <h1>ЛЮДИ ВАЖЛИВІШІ, НІЖ КВІТИ</h1>
+                    <p >Ми обожнюємо квіти, та ще більше — людей. Тож наша справа  — втілити саме ваші почуття в унікальній композиції. До того ж ми цінуємо ваш час та увагу, тож зробимо все так, як треба та трішечки краще.</p>       
+                </div>
+                <div class="benefits_item">
+                    <img class="center-img" src="assets\img\about\benefits-1.webp" alt="" />
+                    <h1>БУТІК ВРАЖЕНЬ</h1>
+                    <p >Наш величезний шоурум подарує радість вам та зачарує ваш інстаграм. П'ять тисяч різновидів рослин у дизайнерських інтер'єрах. Запрошуємо вас до знайомства з квітами, для зустрічей на каву та стильних фотосесій</p>       
+                </div>
+            </div>
+    </div>
+</div>
