--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -44,7 +44,7 @@ li {
 }
 
 .menu-list .menu-item {
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 .menu-left-list {
@@ -81,6 +81,7 @@ li {
 a {
     text-decoration: none;
     color: #000000;
+    font-size: 0.8em;
 }
 
 a:active {
