--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,8 +8,9 @@
                     <li class="menu-item"><a class="menu-link" routerLink="store">Магазин</a></li>
                     <li class="menu-item"><a class="menu-link" routerLink="constructor">Конструктор букетів</a></li>
                     <li class="menu-item"><a class="menu-link" routerLink="blog">Блог</a></li>
+                    <li class="menu-item"><a class="menu-link" routerLink="delivery">Оплата та Доставка</a></li>
                     <li class="menu-item"><a class="menu-link" routerLink="about">Про нас</a></li>
-                </ul>
+                      </ul>
                 <ul class="menu-list menu-right-list">
                     <li class="menu-item"><a class="menu-link">
                             <div class="icons-container"><img class="shoping-cart" src="./assets/img/shopping-cart.svg"
