--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,1 +1,5 @@
-<p>blog works!</p>
+<app-blog-preview></app-blog-preview>
+<app-blog-preview></app-blog-preview>
+<app-blog-preview></app-blog-preview>
+<app-blog-preview></app-blog-preview>
+<app-blog-preview></app-blog-preview>
