blog page: повна сторінка блогу
-all blog content display
-adaptivity

--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,5 +1,10 @@
+<!-- <div class="backGround">
 <app-blog-preview></app-blog-preview>
 <app-blog-preview></app-blog-preview>
 <app-blog-preview></app-blog-preview>
 <app-blog-preview></app-blog-preview>
 <app-blog-preview></app-blog-preview>
+
+</div> -->
+<app-full-blog-page></app-full-blog-page>
+
