blog page: повна сторінка блогу
-кнопки
-hover anim
-покращено header

--- a/src/app/components/blog-preview/blog-preview.component.css
+++ b/src/app/components/blog-preview/blog-preview.component.css
@@ -87,4 +87,10 @@ button:hover{
 button:hover .button-text{
     color: black;
 }
+.blog-img:hover{
+    width: 99%;
+}
+h1:hover{
+    color: rgb(255, 138, 138);;
+}
 
