--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,10 +1,11 @@
-<!-- <div class="backGround">
-<app-blog-preview></app-blog-preview>
-<app-blog-preview></app-blog-preview>
-<app-blog-preview></app-blog-preview>
-<app-blog-preview></app-blog-preview>
-<app-blog-preview></app-blog-preview>
+<div class="backGround">
+    <div class="container">
+        <app-blog-preview></app-blog-preview>
+        <app-blog-preview></app-blog-preview>
+        <app-blog-preview></app-blog-preview>
+        <app-blog-preview></app-blog-preview>
+        <app-blog-preview></app-blog-preview>
+    </div>
 
-</div> -->
-<app-full-blog-page></app-full-blog-page>
+</div>
 
