--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,10 +1,16 @@
+.gap{
+    width: 100%;
+    height: 75px;
+}
 .header {
+    position: fixed;
     width: 100%;
     height: 75px;
     top: 0;
     left: 0;
     z-index: 100;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    background-color: white;
 }
 
 ul {
