--- a/src/app/pages/blog/blog.component.css
+++ b/src/app/pages/blog/blog.component.css
@@ -1,24 +1,13 @@
 .backGround{
     height: 100%;
     width: 100%;
-    background-image: url("C:\Users\AMD\Desktop\FlowerShopFrontend-master\src\assets\img\blog\background.jpg");
-    background-color: gray;
+    background-image: url("C:\Users\AMD\Desktop\FlowerShopFrontend-master\src\assets\img\blog\background.jpg");  
 }
-.pagination{
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    line-height: 1.42857143;
-    color: #333333;
-    box-sizing: border-box;
-    padding: 0;
-    list-style: none;
-    padding-left: 0;
-    margin: 20px 0;
-    border-radius: 4px;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    font-size: 0.875rem;
-    margin-bottom: 4rem;
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3rem;
+    text-align: center;
+    max-width: 1500px;
 }
+
