--- a/src/app/components/blog-preview/blog-preview.component.html
+++ b/src/app/components/blog-preview/blog-preview.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <a (click)="goToFullBlogPage()">
-        <img class="blog-img" src="{{img}}">
+        <div class="img-container">
+            <img class="blog-img" src="{{img}}">
+        </div>
     </a>
     
     <a (click)="goToFullBlogPage()">
