--- a/src/app/pages/delivery/delivery.component.html
+++ b/src/app/pages/delivery/delivery.component.html
@@ -1,33 +1,34 @@
-<div class="container">
-    <div class="gap">
-        <h1>Доставка і оплата</h1> 
-            <h2>Доставка в межах України</h2>
-                <p>Відправлення товарів відбувається протягом 1-5 робочих днів з моменту замовлення (стандартний пошив — до 3-х днів, індивідуальний — до 5-ти). Наразі здійснюємо відправку лише Новою поштою.</p>
-                <p class = "list-title">Кур'єрська доставка до дверей:</p>
+<div class="backGround">
+    <div class="container">
+        <div class="gap">
+            <h1>Доставка і оплата</h1> 
+                <h2>Доставка в межах України</h2>
+                    <p>Відправлення товарів відбувається протягом 1-5 робочих днів з моменту замовлення (стандартний пошив — до 3-х днів, індивідуальний — до 5-ти). Наразі здійснюємо відправку лише Новою поштою.</p>
+                    <p class = "list-title">Кур'єрська доставка до дверей:</p>
+                    <div class="variants-list">
+                        <li class="method">Здійснюється Новою Поштою.</li>
+                        <li class="method">Терміни доставки Новою Поштою 1-4 робочі дні.</li>
+                    </div>
+                    <p class = "list-title">Вартість доставки:</p>
+                    <div class="variants-list">
+                        <li class="method">Розраховується при оформленні замовлення.</li>
+                        <li class="method">Безкоштовна доставка на пункт видачі перевізника замовлень на суму від 2000 грн.</li>
+                        <li class="method">Безкоштовна доставка до дверей замовлень на суму від 2000 грн.</li>
+                    </div>
+                <h2>Самовивіз</h2>
+                    <p>Ви можете самостійно забрати ваше замовлення в м. Ужгород за адресою: вул. Карбишева 2, офіс 136. Будь ласка, зателефонуйте нам перед візитом.</p>
+                    <div id="map"><iframe src="https://www.google.com/maps/d/embed?mid=1PxF2B7gSt4hL_QfAFCdsVsrEe6U0R5w&hl=ru&ehbc=2E312F"  width=100% height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>             
+                <h2>Міжнародна доставка</h2>
+                    <p>INCARNE™ пропонує доставку по всьому світу (окрім Росії, Білорусі та країн, що підтримують російське військове вторгнення в Україну). Доставка здійснюється УкрПоштою, терміни 2-5 тижнів. Покупець обов'язково отримує номер для відстеження посилки. Вартість доставки розраховується при оформленні замовлення.</p>
+                <h2>Оплата</h2>
+                    <p class = "list-title">Варіанти оплати:</p>
                 <div class="variants-list">
-                    <li class="method">Здійснюється Новою Поштою.</li>
-                    <li class="method">Терміни доставки Новою Поштою 1-4 робочі дні.</li>
+                    <li class="method">Карткою на сайті. Міжнародні замовлення відправляються лише за умови повної передоплати. Також, повної передоплати потребують індивідуальні замовлення за вашими побажаннями.</li>
+                    <li class="method">Переказ на картку або ж рахунок компанії.</li>
+                    <li class="method">Оплата при отриманні перевізнику, що здійснює доставку.</li>
+                    <li class="method">Готівкою в нашому магазині.</li>
                 </div>
-                <p class = "list-title">Вартість доставки:</p>
-                <div class="variants-list">
-                    <li class="method">Розраховується при оформленні замовлення.</li>
-                    <li class="method">Безкоштовна доставка на пункт видачі перевізника замовлень на суму від 2000 грн.</li>
-                    <li class="method">Безкоштовна доставка до дверей замовлень на суму від 2000 грн.</li>
-                </div>
-            <h2>Самовивіз</h2>
-                <p>Ви можете самостійно забрати ваше замовлення в м. Ужгород за адресою: вул. Карбишева 2, офіс 136. Будь ласка, зателефонуйте нам перед візитом.</p>
-                <div id="map"><iframe src="https://www.google.com/maps/d/embed?mid=1PxF2B7gSt4hL_QfAFCdsVsrEe6U0R5w&hl=ru&ehbc=2E312F"  width=100% height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>             
-            <h2>Міжнародна доставка</h2>
-                <p>INCARNE™ пропонує доставку по всьому світу (окрім Росії, Білорусі та країн, що підтримують російське військове вторгнення в Україну). Доставка здійснюється УкрПоштою, терміни 2-5 тижнів. Покупець обов'язково отримує номер для відстеження посилки. Вартість доставки розраховується при оформленні замовлення.</p>
-            <h2>Оплата</h2>
-                <p class = "list-title">Варіанти оплати:</p>
-            <div class="variants-list">
-                <li class="method">Карткою на сайті. Міжнародні замовлення відправляються лише за умови повної передоплати. Також, повної передоплати потребують індивідуальні замовлення за вашими побажаннями.</li>
-                <li class="method">Переказ на картку або ж рахунок компанії.</li>
-                <li class="method">Оплата при отриманні перевізнику, що здійснює доставку.</li>
-                <li class="method">Готівкою в нашому магазині.</li>
-            </div>
-    </div>
-</div>          
-
+        </div>
+    </div>          
+</div>
 
