--- a/src/app/pages/blog/blog.component.css
+++ b/src/app/pages/blog/blog.component.css
@@ -1,7 +1,7 @@
 .backGround{
     height: 100%;
     width: 100%;
-    background-image: url("C:\Users\AMD\Desktop\FlowerShopFrontend-master\src\assets\img\blog\background.jpg");  
+    background-image: url("\src\assets\img\blog\background.jpg"); 
 }
 .container {
     margin-left: auto;
@@ -9,5 +9,7 @@
     padding-top: 3rem;
     text-align: center;
     max-width: 1500px;
+    height: 100%;
+    background-color:white;
 }
 
