--- a/src/app/pages/store/components/filters/flowers-type-filter/flowers-type-filter.component.html
+++ b/src/app/pages/store/components/filters/flowers-type-filter/flowers-type-filter.component.html
@@ -8,8 +8,8 @@
     <input class="search-option" type="text" matInput name="searchInput"  [formControl]="searchInput" 
       placeholder="Пошук...">
     <mat-selection-list (selectionChange)="selectionChange($event)" #flowers>
-      <mat-list-option checkboxPosition="before" *ngFor="let flower of filteredOptions" [selected]="flowersSet.get(flower)" [value]="flower">
-        {{flower}}
+      <mat-list-option checkboxPosition="before" *ngFor="let flower of filteredOptions" [selected]="flowersSet.get(flower.displayedName)" [value]="flower">
+        {{flower.displayedName}}
       </mat-list-option>
     </mat-selection-list>
   </mat-expansion-panel>
