Constructor Page:  basic blocks positions

--- a/src/app/pages/constructor/constructor.component.html
+++ b/src/app/pages/constructor/constructor.component.html
@@ -1,1 +1,17 @@
-<p>constructor works!</p>
+<div class="backGround">
+    <div class="container">
+        <div class = "constructor-navigation-container">
+            <div class = "constructor-navigation">
+                    
+            </div>
+        </div>
+        <div class="constructor-container">
+            <div class="bouquet-list">
+
+            </div>
+            <div class="products-container">
+                
+            </div>
+        </div>
+    </div>
+</div>
