--- a/src/app/pages/constructor/constructor.component.css
+++ b/src/app/pages/constructor/constructor.component.css
@@ -9,56 +9,89 @@
     margin-right: auto;
     padding-top: 3rem;
     text-align: center;
-    max-width: 1900px;
+    max-width: 1700px;
     height: fit-content;
     background-color:white;
 }
 
 .constructor-navigation-container{
     width: 100%;
-    height: 150px;
+    height: 110px;
     position: relative;
 }
 
 .constructor-navigation{
     width: 70%;
     height: 80px;
-    background-color: blue;
     position: absolute;
     right: 0;
     bottom: 0;
+    display: flex;
+    justify-content: space-between;
 
 
 }
 
+h1{
+    font-size: 22pt;
+    font-weight: 520;
+    padding-top: 20px;
+    text-align: center;
+}
+
+.constructor-navigation-button{
+    height: 100%;
+    width: 100%;
+    border-bottom: 5px solid #d1d1d1;
+    border-left: 2px solid #d1d1d1;
+}
+
+.constructor-navigation-button:focus {
+    border-bottom: 5px solid #ca6c6c;
+}
+
+
+
 .constructor-container{
     width: 100%;
     height: 100%;
+    min-width: 480px;
     padding-bottom: 3rem;
-    background-color: aqua;
+    display: flex;
     
-
 }
 
 .bouquet-list{
     width: 30%;
     height: 1500px;
     background-color: blueviolet;
-    display: inline-block;  
+  
 }
 
 .products-container{
     width: 70%;
-    height: 1500px;
-    background-color: rgb(89, 14, 160);
-    display: inline-block;  
+    height: fit-content;
+    background-color: rgb(255, 255, 255);
+
+}
+
+.products{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5rem;
+    text-align: center;
+    height: fit-content;
 }
 @media screen and (max-width: 1200px) {
     
-    .bouquet-list,  .constructor-navigation , .products-container{
+    .bouquet-list, .products-container, .constructor-container{
         width: 100%;
         display: block;
     }
+    .constructor-navigation{
+        width: 100%;
+    }
+  
 
      
  }
