Constructor Page: basic bouquet-list

--- a/src/app/pages/constructor/constructor.component.html
+++ b/src/app/pages/constructor/constructor.component.html
@@ -14,8 +14,17 @@
             </div>
         </div>
         <div class="constructor-container">
-            <div class="bouquet-list">
+            <div class="bouquet-list-container">
+                <div class="bouquet-list">
+                    <h1 class="bouquet-list-title">Ваш Букет:</h1>
+                    <div class="selected-products">
 
+                    </div>
+                    <div class="buttons-container">
+                        <button class="left-button"><h1 class="button-text">НАЗАД</h1></button>
+                        <button class="right-button"><h1 class="button-text">ВПЕРЕД</h1></button>
+                    </div>
+                </div>
             </div>
             <div class="products-container">
                 <div class="products">
