--- a/src/app/pages/constructor/constructor.component.css
+++ b/src/app/pages/constructor/constructor.component.css
@@ -50,29 +50,70 @@ h1{
     border-bottom: 5px solid #ca6c6c;
 }
 
-
-
 .constructor-container{
     width: 100%;
     height: 100%;
     min-width: 480px;
     padding-bottom: 3rem;
-    display: flex;
-    
+    display: flex;   
+}
+
+.bouquet-list-container{
+    width: 30%;
+    height: fit-content;
 }
 
 .bouquet-list{
-    width: 30%;
-    height: 1500px;
-    background-color: blueviolet;
-  
+    height: fit-content;
+    width: 85%;
+    background-color: #FFE5E8;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 2px 4px rgb(139, 139, 139);
+}
+
+.bouquet-list-title{
+    padding-top:60px;
+    padding-bottom: 40px;
+    font-size: 26pt;
+}
+
+.buttons-container{
+    height: fit-content;
+    width: 100%;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+
+}
+
+button{
+    border-radius: 40px;
+    width: fit-content;
+    height: fit-content;
+    min-width: 120px;
+    border-width: 0px;
+    box-shadow: 0px 2px 4px rgb(139, 139, 139);
+}
+
+.button-text{
+    font-weight: 400;
+    font-size: 16pt;
+}
+
+.right-button{
+    margin-left: 5rem ;
+}
+
+.selected-products{
+    width: 100%;
+    height: 400px;
+    background-color: white;
 }
 
 .products-container{
     width: 70%;
     height: fit-content;
-    background-color: rgb(255, 255, 255);
-
 }
 
 .products{
@@ -82,16 +123,24 @@ h1{
     text-align: center;
     height: fit-content;
 }
-@media screen and (max-width: 1200px) {
+
+button:hover{
+   background-color: rgb(226, 226, 226);
+}
+
+@media screen and (max-width: 1350px) {
     
-    .bouquet-list, .products-container, .constructor-container{
+    .bouquet-list-container, .products-container, .constructor-container{
         width: 100%;
         display: block;
     }
     .constructor-navigation{
         width: 100%;
     }
-  
-
-     
+    .bouquet-list-container{
+        padding-top: 3.5REM;
+    }  
+    .right-button{
+        margin-left: 17rem ;
+    }  
  }
