Add top page banner design  & search bar to Blog page
add component to:
       * about us
       * constructor
       * delivery
       * blog

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="backGround">
     <div class="container">
+        <app-page-top-baner></app-page-top-baner>
         <div class="gap">
-            <h1>Про нас</h1>
                 <p>Ми обожнюємо квіти та обожнюємо ними ділитися. Тож задля цього особисто обираємо та веземо в Україну кращі бутони з усіх куточків планети. Ми знаємо тренди світової квіткової моди, так само як тонкощі зберігання, транспортування та дбайливого догляду квітки. Адже займаємося цим вже понад 10 років.</p>
                 <img class="center-img" src="assets\img\about\about-01.webp" alt="" />
             
