--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,5 +1,10 @@
 <div class="backGround">
     <div class="container">
+        <app-page-top-baner></app-page-top-baner>
+        <div class="searchbar-container">
+            <app-searchbar></app-searchbar>
+        </div>
+
         <app-blog-preview></app-blog-preview>
         <app-blog-preview></app-blog-preview>
         <app-blog-preview></app-blog-preview>
