--- a/src/app/pages/delivery/delivery.component.html
+++ b/src/app/pages/delivery/delivery.component.html
@@ -1,7 +1,7 @@
 <div class="backGround">
     <div class="container">
+        <app-page-top-baner></app-page-top-baner>
         <div class="gap">
-            <h1>Доставка і оплата</h1> 
                 <h2>Доставка в межах України</h2>
                     <p>Відправлення товарів відбувається протягом 1-5 робочих днів з моменту замовлення (стандартний пошив — до 3-х днів, індивідуальний — до 5-ти). Наразі здійснюємо відправку лише Новою поштою.</p>
                     <p class = "list-title">Кур'єрська доставка до дверей:</p>
