--- a/src/app/pages/constructor/constructor.component.html
+++ b/src/app/pages/constructor/constructor.component.html
@@ -1,5 +1,7 @@
-<div class="backGround">
+<div class="backGround">   
     <div class="container">
+        <app-page-top-baner></app-page-top-baner>
+        <!-- navigation-container -->
         <div class = "constructor-navigation-container">
             <div class = "constructor-navigation">
                 <div class="constructor-navigation-button">
@@ -13,7 +15,11 @@
                 </div>  
             </div>
         </div>
+        
         <div class="constructor-container">
+
+            <!-- bouquet-list-container -->
+
             <div class="bouquet-list-container">
                 <div class="bouquet-list">
                     <h1 class="bouquet-list-title">Ваш Букет:</h1>
@@ -21,11 +27,14 @@
 
                     </div>
                     <div class="buttons-container">
-                        <button class="left-button"><h1 class="button-text">НАЗАД</h1></button>
-                        <button class="right-button"><h1 class="button-text">ВПЕРЕД</h1></button>
+                        <button class="left-button"><h1 class="button-text">< НАЗАД</h1></button>
+                        <button class="right-button"><h1 class="button-text">ДАЛІ ></h1></button>
                     </div>
                 </div>
             </div>
+
+            <!-- products-container -->
+
             <div class="products-container">
                 <div class="products">
                     <div fxLayout="row wrap" fxLayoutGap="30px grid">
@@ -36,6 +45,9 @@
                     </div> 
                 </div>
             </div>
+
+            <!--  end  -->
+
         </div>
     </div>
 </div>
