--- a/src/app/pages/delivery/delivery.component.css
+++ b/src/app/pages/delivery/delivery.component.css
@@ -4,18 +4,18 @@ h1{
 }
 
 h2{
-    margin-left: 2rem;
+    margin-left: 8%;
     margin-bottom: 2rem;
     margin-top: 2rem;
 }
 p{
-    margin-left: 2rem;
+    margin-left: 7%;
     margin-right: 3rem;
     font-size: larger;
     font-weight: 350;
 }
 .variants-list{
-    margin-left: 5rem;
+    margin-left: 13%;
     margin-right: 8pt;
 }
 .method{
@@ -35,7 +35,6 @@ p{
 .container {
     margin-left: auto;
     margin-right: auto;
-    padding: 0 20px;
     max-width: 1300px;
     height: 100%;
     background-color: white;
