--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
                         <li class="menu-item"><a class="menu-link" routerLink="about">Про нас</a></li>
                         </ul>
                     <ul class="menu-list menu-right-list">
-                        <li class="menu-item"><a class="menu-link">
+                        <li class="menu-item"><a class="menu-link" routerLink="cart">
                                 <div class="icons-container"><img class="shoping-cart" src="./assets/img/shopping-cart.svg"
                                         alt="shopping-cart">
                                 </div>
